body overflow hidden fix safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+body {
+    position: relative;
+}
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
